# inspection_bot

./: CMakeLists.txt  Doxyfile  README.md  compile_commands.json  package.xml
.github/workflows/: ci.yaml
config/: slam_config.yaml
docs/html/: ArucoDetect_8cpp.html  ArucoDetect_8cpp__incl.map  ArucoDetect_8cpp__incl.md5  ArucoDetect_8hpp.html  ArucoDetect_8hpp__dep__incl.map  ArucoDetect_8hpp__dep__incl.md5  ArucoDetect_8hpp__incl.map  ArucoDetect_8hpp__incl.md5  ArucoDetect_8hpp_source.html  ArucoMain_8cpp.html  ArucoMain_8cpp__incl.map  ArucoMain_8cpp__incl.md5  InspectorBot_8cpp.html  InspectorBot_8cpp__incl.map  InspectorBot_8cpp__incl.md5  InspectorBot_8hpp.html  InspectorBot_8hpp__dep__incl.map  InspectorBot_8hpp__dep__incl.md5  InspectorBot_8hpp__incl.map  InspectorBot_8hpp__incl.md5  InspectorBot_8hpp_source.html  annotated.html  classArUcoDetectionNode-members.html  classArUcoDetectionNode.html  classArUcoDetectionNode__coll__graph.map  classArUcoDetectionNode__inherit__graph.md5  classInspectorBot-members.html  classInspectorBot.html  classInspectorBot__coll__graph.map  classInspectorBot__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  (+6 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
docs/latex/: ArucoDetect_8cpp.tex  ArucoDetect_8cpp__incl.md5  ArucoDetect_8hpp.tex  ArucoDetect_8hpp__dep__incl.md5  ArucoDetect_8hpp__incl.md5  ArucoMain_8cpp.tex  ArucoMain_8cpp__incl.md5  InspectorBot_8cpp.tex  InspectorBot_8cpp__incl.md5  InspectorBot_8hpp.tex  InspectorBot_8hpp__dep__incl.md5  InspectorBot_8hpp__incl.md5  annotated.tex  classArUcoDetectionNode.tex  classArUcoDetectionNode__inherit__graph.md5  classInspectorBot.tex  classInspectorBot__inherit__graph.md5  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
include/: ArucoDetect.hpp  InspectorBot.hpp
launch/: launch_inspection_bot.launch.py
maps/: my_map.pgm  my_map.yaml
models/aruco_marker_0/: model.sdf
models/walls/: model.sdf
results/: cppcheck_results.txt  cpplint_results.txt
ros2_aruco/ros2_aruco_interfaces/: package.xml
src/: ArucoDetect.cpp  ArucoMain.cpp  InspectorBot.cpp  main.cpp
test/: InspectorBotTest.cpp
worlds/: industry.world
